# jd-aula-8

./: etl.py  pipeline.py  pyproject.toml
