[project]
name = "aula-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Roldao Araujo",email = "roldaowilker@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "pandera (>=0.29.0,<0.30.0)",
    "fastparquet (>=2025.12.0,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
